added footer and css tweaks

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,18 @@
             
             {{content}}      
 
-
+            <div class='row footer'>
+            <hr />
+            
+            <div align='center'>
+                <p>
+                    Code and documentation licensed under Apache 2.0, available on <a href="https://github.com/twosigma/beaker-notebook">GitHub</a>
+                    <br />
+                    Code and documentation copyright Two Sigma Investments, LLC
+                </p>
+            </div>
+            
+            </div>
 
         </div> <!-- /container -->
     </body>
