design tweaks and new FAQs

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,10 +11,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li id="nav-about"><a href="about.html">About</a></li>
+                    <li id="nav-about"><a href="about.html">About / features</a></li>
                     <li id="nav-getting-started"><a href="getting-started.html">Getting started</a></li>
                     <li id="nav-faq"><a href="faq.html">FAQ</a></li>
-                    <li id="nav-try"><a href="try.html">Try Beaker</a></li>
 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
