--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,11 +18,11 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Community <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Community / feedback <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Stack Overflow <i class="fa fa-external-link-square"></i></a></li>
-                            <li><a href="#">Twitter <i class="fa fa-external-link-square"></i></a></li>
-                            <li><a href="#">Blog <i class="fa fa-external-link-square"></i></a></li>
+                            <li><a href="https://twitter.com/beakernotebook">Twitter <i class="fa fa-external-link-square"></i></a></li>
+                            <li><a href="https://github.com/twosigma/beaker-notebook/issues/new">Report bugs and requests <i class="fa fa-external-link-square"></i></a></li>
+                            <li><a href="mailto:beaker-feedback@twosigma.com">Email us <i class="fa fa-external-link-square"></i></a></li>
                         </ul>
                     </li>                            
                     <li><a href="https://github.com/twosigma/beaker-notebook">GitHub <i class="fa fa-external-link-square"></i></a></li>
