added privacy policy page, changed to TSOS

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,20 +7,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src=images/icon.png width='30px'> Beaker</a>
+                <a class="navbar-brand" href="/index.html"><img src=/images/icon.png width='30px'> Beaker</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li id="nav-about"><a href="about.html">About / features</a></li>
-                    <li id="nav-getting-started"><a href="getting-started.html">Getting started</a></li>
-                    <li id="nav-faq"><a href="faq.html">FAQ</a></li>
+                    <li id="nav-about"><a href="/about.html">About / features</a></li>
+                    <li id="nav-getting-started"><a href="/getting-started.html">Getting started</a></li>
+                    <li id="nav-faq"><a href="/faq.html">FAQ</a></li>
 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Community / feedback <b class="caret"></b></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Feedback <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="https://twitter.com/beakernotebook">Twitter <i class="fa fa-external-link-square"></i></a></li>
                             <li><a href="https://github.com/twosigma/beaker-notebook/issues/new">Report bugs and requests <i class="fa fa-external-link-square"></i></a></li>
                             <li><a href="mailto:beaker-feedback@twosigma.com">Email us <i class="fa fa-external-link-square"></i></a></li>
                         </ul>
