--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
 
         <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link href="css/main.css" rel="stylesheet">
-        <link href="css/scrollspy.css" rel="stylesheet">
+        <link href="/css/main.css" rel="stylesheet">
+        <link href="/css/scrollspy.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -47,7 +47,9 @@
                 <p>
                     Code and documentation licensed under Apache 2.0, available on <a href="https://github.com/twosigma/beaker-notebook">GitHub</a>
                     <br />
-                    Code and documentation copyright Two Sigma Investments, LLC
+                    Code and documentation copyright Two Sigma Open Source, LLC
+                    <br />
+                    <a href='/privacy/'>Privacy policy</a>
                 </p>
             </div>
             
