--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,8 +14,8 @@
 
         <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link href="/css/main.css" rel="stylesheet">
-        <link href="/css/scrollspy.css" rel="stylesheet">
+        <link href="{{page.root}}css/main.css" rel="stylesheet">
+        <link href="{{page.root}}css/scrollspy.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
