--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,13 +7,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/index.html"><img src={{page.root}}images/icon.png width='30px'> Beaker</a>
+            <a class="navbar-brand" href="{{page.root}}index.html"><img src={{page.root}}images/icon.png width='30px'> Beaker</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li id="nav-about"><a href="/about.html">About / features</a></li>
-                <li id="nav-getting-started"><a href="/getting-started.html">Getting started</a></li>
-                <li id="nav-faq"><a href="/faq.html">FAQ</a></li>
+                <li id="nav-about"><a href="{{page.root}}about.html">About / features</a></li>
+                <li id="nav-getting-started"><a href="{{page.root}}getting-started.html">Getting started</a></li>
+                <li id="nav-faq"><a href="{{page.root}}faq.html">FAQ</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
