added root variable to footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
                         <br />
                         Code and documentation copyright Two Sigma Open Source, LLC
                         <br />
-                        <a href='/privacy/'>Privacy policy</a> - <a href='/disclaimer/'>Compliance disclaimer</a>
+                        <a href='{{page.root}}privacy/'>Privacy policy</a> - <a href='{{page.root}}disclaimer/'>Compliance disclaimer</a>
                     </p>
                 </div>
 
