--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{page.root}}index.html"><img src={{page.root}}images/icon.png width='30px' alt='Beaker logo'> Beaker</a>
+            <a class="navbar-brand" href="{{page.root}}index.html"><img src={{page.root}}images/icon.png width='30' alt='Beaker logo'> Beaker</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
