use all double quotes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,16 +40,16 @@
 
             {{content}}      
 
-            <div class='row footer'>
+            <div class="row footer">
                 <hr />
 
-                <div align='center'>
+                <div align="center">
                     <p>
                         Code and documentation licensed under Apache 2.0, available on <a href="https://github.com/twosigma/beaker-notebook">GitHub</a>
                         <br />
                         Code and documentation copyright Two Sigma Open Source, LLC
                         <br />
-                        <a href='{{page.root}}privacy/'>Privacy policy</a> - <a href='{{page.root}}disclaimer/'>Compliance disclaimer</a>
+                        <a href="{{page.root}}privacy/">Privacy policy</a> - <a href="{{page.root}}disclaimer/">Compliance disclaimer</a>
                     </p>
                 </div>
 
