--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,6 @@
                 <li id="nav-about"><a href="{{page.root}}about.html">About / features</a></li>
                 <li id="nav-getting-started"><a href="{{page.root}}getting-started.html">Getting started</a></li>
                 <li id="nav-faq"><a href="{{page.root}}faq.html">FAQ</a></li>
-
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
@@ -26,6 +25,6 @@
                 </li>                            
                 <li><a href="https://github.com/twosigma/beaker-notebook">GitHub <i class="fa fa-external-link-square"></i></a></li>
             </ul>
-        </div><!--/.nav-collapse -->
-    </div><!--/.container-fluid -->
+        </div>
+    </div>
 </div>
