--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,18 +23,14 @@
           <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>        
         <script src="js/scrollspy.js"></script>
-
     </head>
 
     <body>
 
         <div class="container">
-
-            <!-- Static navbar -->
 
             {% include header.html %}
 
@@ -42,7 +38,6 @@
 
             <div class="row footer">
                 <hr />
-
                 <div align="center">
                     <p>
                         Code and documentation licensed under Apache 2.0, available on <a href="https://github.com/twosigma/beaker-notebook">GitHub</a>
@@ -52,9 +47,7 @@
                         <a href="{{page.root}}privacy/">Privacy policy</a> - <a href="{{page.root}}disclaimer/">Compliance disclaimer</a>
                     </p>
                 </div>
-
             </div>
-
-        </div> <!-- /container -->
+        </div> 
     </body>
 </html>
