fill in terms of use

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
                         <br />
                         Code and documentation copyright Two Sigma Open Source, LLC
                         <br />
-                        <a href="{{page.root}}privacy/">Privacy policy</a> - <a href="{{page.root}}disclaimer/">Compliance disclaimer</a>
+                        <a href="{{page.root}}privacy/">Privacy policy</a> - <a href="{{page.root}}disclaimer/">Terms of use</a>
                     </p>
                 </div>
             </div>
