add TSOS/TSI disclaimer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,10 @@
                         <br />
                         <a href="{{page.root}}privacy/">Privacy policy</a> - <a href="{{page.root}}disclaimer/">Terms of use</a>
                     </p>
+                    <br />
+                    <p>
+                        The primary mission of Two Sigma Open Source, LLC (“TSOS”) is to promote, manage and maintain open source software projects.  TSOS is affiliated with Two Sigma Investments, LLC, Two Sigma Advisers, LLC and Two Sigma Securities, LLC, which (along with certain of their affiliates) engage in various investment advisory and broker-dealer activities.  However, TSOS is not involved in the financial services businesses of these entities.  
+                    </p>
                 </div>
             </div>
         </div> 
