update tou path

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
                         <br />
                         Code and documentation copyright Two Sigma Open Source, LLC
                         <br />
-                        <a href="{{page.root}}privacy/">Privacy policy</a> - <a href="{{page.root}}disclaimer/">Terms of use</a>
+                        <a href="{{page.root}}privacy/">Privacy policy</a> - <a href="{{page.root}}tou/">Terms of use</a>
                     </p>
                     <br />
                     <p>
