--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,67 +3,13 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
 
-        <title>Beaker Notebook - {{page.title}}</title>
-
-        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link href="{{page.root}}css/main.css" rel="stylesheet">
-        <link href="{{page.root}}css/scrollspy.css" rel="stylesheet">
-
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-          <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>        
-        <script src="js/scrollspy.js"></script>
-        
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-50203987-1', 'beakernotebook.com');
-          ga('send', 'pageview');
-
-        </script>        
-        
-    </head>
+    {% include head.html %}
 
     <body>
-
-        <div class="container">
-
-            {% include header.html %}
-
+        {% include header.html %}
             {{content}}      
 
-            <div class="row footer">
-                <hr />
-                <div align="center">
-                    <p>
-                        Code and documentation licensed under Apache 2.0, available on <a href="https://github.com/twosigma/beaker-notebook">GitHub</a>
-                        <br />
-                        Code and documentation copyright Two Sigma Open Source, LLC
-                        <br />
-                        <a href="{{page.root}}privacy/">Privacy policy</a> - <a href="{{page.root}}tou/">Terms of use</a>
-                    </p>
-                    <br />
-                    <p>
-                        The primary mission of Two Sigma Open Source, LLC (“TSOS”) is to promote, manage and maintain open source software projects.  TSOS is affiliated with Two Sigma Investments, LLC, Two Sigma Advisers, LLC and Two Sigma Securities, LLC, which (along with certain of their affiliates) engage in various investment advisory and broker-dealer activities.  However, TSOS is not involved in the financial services businesses of these entities.  
-                    </p>
-                </div>
-            </div>
-        </div> 
+            {% include footer.html %}
     </body>
 </html>
