fix footer width

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,20 @@
 <div class="row footer">
     <hr />
-    <div align="center">
-        <p>
-            Code and documentation licensed under Apache 2.0, available on <a href="https://github.com/twosigma/beaker-notebook">GitHub</a>
+    
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+        <div align="center">
+            <p>
+                Code and documentation licensed under Apache 2.0, available on <a href="https://github.com/twosigma/beaker-notebook">GitHub</a>
+                <br />
+                Code and documentation copyright Two Sigma Open Source, LLC
+                <br />
+                <a href="{{page.root}}privacy/">Privacy policy</a> - <a href="{{page.root}}tou/">Terms of use</a>
+            </p>
             <br />
-            Code and documentation copyright Two Sigma Open Source, LLC
-            <br />
-            <a href="{{page.root}}privacy/">Privacy policy</a> - <a href="{{page.root}}tou/">Terms of use</a>
-        </p>
-        <br />
-        <p>
-            The primary mission of Two Sigma Open Source, LLC (“TSOS”) is to promote, manage and maintain open source software projects.  TSOS is affiliated with Two Sigma Investments, LLC, Two Sigma Advisers, LLC and Two Sigma Securities, LLC, which (along with certain of their affiliates) engage in various investment advisory and broker-dealer activities.  However, TSOS is not involved in the financial services businesses of these entities.  
-        </p>
+            <p>
+                The primary mission of Two Sigma Open Source, LLC (“TSOS”) is to promote, manage and maintain open source software projects.  TSOS is affiliated with Two Sigma Investments, LLC, Two Sigma Advisers, LLC and Two Sigma Securities, LLC, which (along with certain of their affiliates) engage in various investment advisory and broker-dealer activities.  However, TSOS is not involved in the financial services businesses of these entities.  
+            </p>
+        </div>
     </div>
 </div>
