--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@
         {% include header.html %}
             {{content}}      
 
+        <div class="container-fluid">
             {% include footer.html %}
+        </div>
     </body>
 </html>
