--- a/_includes/languages-win.html
+++ b/_includes/languages-win.html
@@ -27,8 +27,8 @@
             </li>
             <li>
                 Open R and run these commands
-
-                <code>install.packages('Rserve',,'http://www.rforge.net/')</code>
+                <br />
+                <code>install.packages('Rserve')</code>
                 <br />
                 <code>install.packages("ggplot2")</code>
             </li>
