--- a/_includes/languages-linux.html
+++ b/_includes/languages-linux.html
@@ -14,7 +14,7 @@
 </p>
 
 <p>Open R and run this:</p>
-<code>install.packages('Rserve',,'http://www.rforge.net/')</code>
+<code>install.packages('Rserve')</code>
 <br />
 <code>install.packages("ggplot2")</code>
 
