--- a/_includes/languages-mac.html
+++ b/_includes/languages-mac.html
@@ -23,6 +23,9 @@
                 <a href="http://cran.r-project.org/bin/macosx/">Install R</a>
             </li>
             <li>
+                <a href="http://xquartz.macosforge.org/landing/">Install XQuartz</a>
+            </li>
+            <li>
                 Open R and run these commands
                 <br />
                 <code>install.packages('Rserve')</code>
